# AI-Pilot

./: .dockerignore  .gitattributes  .gitignore  .prettierignore  README.md  docker-compose.yml  package-lock.json  package.json
docs/: architecture.md  mvp-contract.md  (+2 more)
services/ai-service/: .env.example  Dockerfile  pyproject.toml  requirements-dev.lock.txt  requirements.lock.txt  requirements.txt
services/ai-service/src/agent_ai/: __init__.py  main.py
services/ai-service/src/agent_ai/agents/: __init__.py
services/ai-service/src/agent_ai/ai/: __init__.py
services/ai-service/src/agent_ai/api/: __init__.py  errors.py  router.py
services/ai-service/src/agent_ai/browser/: __init__.py  safety.py  selenium_remote.py  session_cleanup.py
services/ai-service/src/agent_ai/config/: __init__.py  settings.py
services/ai-service/src/agent_ai/desktop/: __init__.py
services/ai-service/src/agent_ai/memory/: __init__.py
services/ai-service/src/agent_ai/models/: __init__.py  domain.py
services/ai-service/src/agent_ai/orchestrator/: __init__.py  classification.py  control_client.py  manager.py  ranking.py  request_understanding.py
services/ai-service/src/agent_ai/prompts/: __init__.py
services/ai-service/src/agent_ai/providers/: __init__.py  base.py  deterministic_test.py  openai_responses.py  openrouter_responses.py
services/ai-service/tests/: test_browser_executor.py  test_browser_safety.py  test_control_client.py  test_coupons.py  test_egypt.py  test_health.py  test_manager.py  test_openai_responses.py  test_openrouter_responses.py  test_request_understanding.py  test_runs_api.py  test_session_cleanup.py  test_vision_locator.py  test_workflows.py
services/ai-service/tests/fixtures/: captcha.html  checkout.html  coupon_rejected.html  nested_address.html  seat_hold.html
(+244 files in other folders)
